<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/ic_event_available_24dp"
        android:title="@string/title_upcoming_event" />

    <item
        android:id="@+id/navigation_finished"
        android:icon="@drawable/ic_event_done_list_24dp"
        android:title="@string/title_finished_event" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/baseline_favorite_filled_24"
        android:title="@string/title_favorite_event" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/title_setting_event" />


</menu>